# animaksm

./: AGENTS.md  README.md
config/: animaksm.toml
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  ksm.rs  lib.rs  procfs.rs  psi.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: governor.rs  madvise.rs  main.rs  metrics.rs  scanner.rs
crates/swap-proxy/: Cargo.toml
crates/swap-proxy/src/: backend.rs  dedup.rs  main.rs  ublk_frontend.rs
systemd/: animaksm-swap-proxy.service  animaksm.service  zramdedup.service
