[package]
name = "animaksm-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "animaksm"
path = "src/main.rs"

[dependencies]
animaksm-common = { path = "../common" }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-journald.workspace = true
tokio.workspace = true
clap.workspace = true
nix.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
